Modify thymleaf layout dialect

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -15,7 +15,7 @@
   <div layout:replace="layout/navi::navbar"></div>
   <div id="content" class="clearfix">
     <div class="container">
-      <div layout:fragment="layout-content" th:remove="tag"></div>
+      <div layout:fragment="content" th:remove="tag"></div>
     </div>
   </div>
 
